@@ -1,3 +1,9 @@
+2009-11-03  Alan Modra  <amodra@bigpond.net.au>
+	    Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* elf32-spu.c (mark_functions_via_relocs): Handle non-branch relocs
+	(jump tables or other references to code labels) as well.
+
 2009-10-20  Alan Modra  <amodra@bigpond.net.au>
 
 	PR binutils/10802
